fix : base-url 절대참조를 상대 참조로 수정